# SatsueiSlip

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SatsueiSlip.spec  pyproject.toml
.github/workflows/: release.yml
installer/: SatsueiSlip.iss
scripts/: build_installer.ps1
src/satsuei_slip/: __init__.py  __main__.py  app.py  image_exporter.py  main_window.py  models.py  pdf_exporter.py  release_config.py  settings_store.py  updater.py  video_probe.py
